# spotrun

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
spotrun/: __init__.py  ami.py  cli.py  ec2.py  exceptions.py  pricing.py  session.py  sync.py
spotrun/scripts/: bootstrap.sh
